SERVER-6980 Skip empty extents in Record::getPrev